Bug 1918802 - Simplify scrollbar track drawing. r=mstange,mac-reviewers
This was caught by Markus. When you hover over an overlay scrollbar on
macOS, you'd hit this the PaintScrollbar() code-path (or rather, you
won't bail out from the if (overlay && !hovered)), but macOS draws the
track in PaintScrollbarTrack().

Android doesn't hit this because android scrollbars can't ever be
hovered (they have pointer-events: none). This is a better fix than
D222172, which didn't paint the background for the non-overlay
scrollbars...

This doesn't change behavior since scrollbar and the track have the same
size (as cocoa scrollbars can never have buttons). Removing
nsSliderFrame is a refactor for another day if ever.

Differential Revision: https://phabricator.services.mozilla.com/D222194

--- a/layout/style/res/scrollbars.css
+++ b/layout/style/res/scrollbars.css
@@ -176,15 +176,6 @@ scrollbar[root] {
   }
 }
 
-slider {
-  appearance: auto;
-  -moz-default-appearance: scrollbartrack-horizontal;
-}
-
-slider[orient="vertical"] {
-  -moz-default-appearance: scrollbartrack-vertical;
-}
-
 scrollbarbutton {
   appearance: auto;
   -moz-default-appearance: scrollbarbutton-right;
